# gphils_blog

./: .#first_post.txt  .gitignore  LICENSE  README.md  build.sh  copy_site.sh  first_post.txt  gphil_blog.cabal  gphilblog.cabal  index.html  site.hi  site.hs  stack.yaml
.circleci/: config.yml
admin/: config.yml  index.html
css/: default.css
js/: combined.js
posts/: 2011-10-26-setting-up-a-blog-with-hakyll-and-github.markdown  2012-06-18-is-a-sql-having-clause-necessary.markdown  2012-09-04-logging-in-clojure.markdown  2013-03-05-loading-us-census-acs-data-into-postgresql.markdown  2013-04-27-50-percent-failure-rate.markdown  2013-05-12-is-it-possible-to-securely-meter-a-javascript-api.markdown  2013-06-06-thoughts-on-clojure-versus-ruby-for-startups.markdown  2013-06-10-assessing-clojure-versus-ruby-adoption.markdown  2013-06-10-tracking-clojure-versus-ruby-adoption.markdown  2013-07-11-2013-leiningen-download-stats.markdown  2013-08-01-dont-get-lost-in-big-data.markdown  2013-08-31-my-quantified-self-setup.markdown  2013-09-08-yahoos-new-direction.markdown  2014-01-21-a-really-simple-product-development-workflow.markdown  2014-05-05-fire-and-forget-background-jobs-using-clojure-futures.markdown  2015-03-16-this-sucks.markdown  2015-03-17-this-is-very-jobsian.markdown  2016-05-26-explaining-the-2017-philadelphia-property-tax-assessment-changes.markdown  2017-02-18-why-im-joining-houwzer.markdown  2020-05-02-test-post.md  2020-05-03-test-post.markdown
templates/: default.html  index.html  post-list.html  post.html  postitem.html  posts.html
(+1 files in other folders)
