Name:               gphilblog
Version:            0.1.0.0
Synopsis:           gphil's blog static site generator
Description:        Personal website of Greg Phillips
Homepage:           http://gphil.net
License:            AllRightsReserved
License-file:       LICENSE
Author:             Greg Phillips
Maintainer:         gphil@gphil.net
Copyright:          (C) 2011-2017 Greg Phillips
Category:           Web
Build-type:         Simple
Extra-source-files: README.markdown
Cabal-version:      >= 1.8

Executable site
  Main-is:        site.hs
  Ghc-options:    -Wall
  Hs-source-dirs: .

  Build-depends:
    base      >= 4.6  && < 4.10,
    binary    >= 0.5  && < 0.9,
    directory >= 1.2  && < 1.4,
    filepath  >= 1.3  && < 1.5,
    hakyll    >= 4.7  && < 4.10,
    pandoc    >= 1.14 && < 1.20,
    process   >= 1.1  && < 1.5