Name:               gphilblog
Version:            0.1.0.0
Synopsis:           gphil's blog static site generator
Description:        Personal website of Greg Phillips
Homepage:           http://gphil.net
License:            AllRightsReserved
License-file:       LICENSE
Author:             Greg Phillips
Maintainer:         gphil@gphil.net
Copyright:          (C) 2011-2020 Greg Phillips
Category:           Web
Build-type:         Simple
Extra-source-files: README.md
Cabal-version:      >= 1.8

Executable site
  Main-is:        site.hs
  Ghc-options:    -Wall
  Hs-source-dirs: .

  Build-depends:
    hakyll    >= 4.7